--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,19 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+}
+
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "com.cashable.bankify.BankifyApplication.java"
+	}
 }
 
 tasks.named('test') {
