fix: set the API version to the context path

--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -1,8 +1,14 @@
+server:
+    servlet:
+        context-path:/v1
+
+
 spring:
     datasource:
         url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
         username: ${PGUSER}
         password: ${PGPASSWORD}
+
 
     jpa:
         open-in-view: false
